# acceptance-tests

./: README.md  pyproject.toml
acceptance_core/core/: asserts.py  driver.py  selector.py  testing_project_url_data.py
acceptance_core/core/actions/: driver_actions.py  screenshot_actions.py  waiting_actions.py
acceptance_core/core/exception/: uc_exception.py  ut_exception.py
acceptance_core/helpers/: env.py
acceptance_core/helpers/test_runner/: ci_testing_host_helper.py
acceptance_core/helpers/utils/: collections_utils.py  date_utils.py
content/blocks/destinations_page/: all_cities_block.py
content/blocks/main_page/: all_cities_block.py  destinations_block.py  login_block.py  logo_block.py
content/blocks/main_page/user_menu/: add_experience_block.py  edit_profile_block.py  inbox_block.py  (+4 more)
content/fixtures/: user_fixtures.py
content/helpers/: user_data.py
content/objects/: user.py
content/pages/destinations/: destinations_page.py
content/pages/main/: main_page.py
content/url_builders/main/: main_page_url_builder.py
content/url_builders/registration/: registration_page_url_builder.py
docker/: Dockerfile  entrypoint.sh
testing_projects_common/blocks/: base_block.py  button.py  checkbox.py  input_field.py  link.py  select_field.py  text_block.py
testing_projects_common/blocks/table/: cell.py  row.py  table.py
testing_projects_common/conftest/: conftest_utils.py
testing_projects_common/pages/: base_page.py
tests/: conftest.py  pytest-local.ini
tests/main_page/: test_click_all_cities.py  test_correctly_opening_main_page.py
