[tool.poetry]
name = "uitests"
version = "0.1.0"
description = "Startpack UI Tests"
authors = ["QA TechTeam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

attrs = "^22.1.0"
cryptography = "^38.0.1"
faker = "^14.2.0"
flaky = "^3.7.0"
jsonschema = "^4.16.0"
more-itertools = "^8.14.0"
Pillow = "^9.2.0"
pyparsing = "^3.0.9"
pytest = "^7.1.3"
pytest-env = "^0.6.2"
pytest-html = "^3.1.1"
pytest-xdist = "^2.5.0"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"
selenium = "^4.4.3"
urllib3 = "^1.26.12"
webdriver_manager = "^3.8.3"
yamale = "^4.0.4"
clickhouse-driver = "^0.2.6"
